apps/redmine/templates/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine-svc
  labels:
    app: redmine
spec:
  selector:
    app: redmine
  ports:
    - port: 3000
      targetPort: 3000
      name: http
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: redmine
# spec:
#   ingressClassName: internal
#   tls:
#   - hosts:
#     - redmine.pawked.com
#   rules:
#   - host: redmine.pawked.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: redmine-svc
#             port:
#               number: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redmine
  namespace: redmine
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "redmine.pawked.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: redmine-svc
          port: 3000
          kind: Service
          group: ''
          weight: 1
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-postgresql-svc
  labels:
    app: redmine-postgresql
spec:
  ports:
  - port: 5432
    name: tcp-postgres
  selector:
    app: redmine-postgresql
